[package]
name = "random-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.5", features=['derive']}
clap = { version = "4.4.5", features=['derive']}
rand = "0.8"
rayon = "1.5.3"
spinners = "4.1.0"
dialoguer = "0.11.0"
num_cpus = "1.13.1"
indicatif = "0.17.0"

[profile.release]
opt-level = 3
lto = true